<resources>
    <!-- Hlavni aktivita -->
    <string name="app_name">SmartList</string>
    <string name="et_task_name_hint">Nový úkol&#8230;</string>
    <string name="btn_add_task">Přidat</string>
    <string name="btn_task_lists">Seznamy</string>

    <!-- Aktivita Editace ukolu -->
    <string name="tv_task_name_label">Název</string>
    <string name="tv_task_description_label">Popis</string>
    <string name="tv_due_date_label">Splnit do</string>
    <string name="tv_notification_date_label">Připomenout</string>
    <string name="tv_place_label">Místo</string>
    <string name="tv_radius_label">Radius</string>
    <string name="tv_radius">1,5 km</string>
    <string name="tv_set_geofence_label">Upozornit</string>
    <string name="btn_edit_task">Upravit</string>
    <string name="tv_task_list_label">Seznam</string>
    <string name="tv_task_completed_label">Splněno</string>
    <string name="tv_recording_label">Nahrávka</string>
    <string name="tb_stop">STOP</string>
    <string name="tb_start">START</string>

    <!-- Item listu -->
    <string name="photo_thumbnail">Popis fotky</string>

    <!-- ActionBary -->
    <string name="action_add_task_list">Přidat seznam</string>
    <string name="action_sort">Seřadit</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_hide_completed">Schovat splněné</string>
    <string name="action_show_all_tasks">Všechny úkoly</string>
    <string name="action_task_places_map">Mapa míst úkolů v seznamu</string>
    <string name="action_done">Potvrdit</string>
    <string name="action_delete_task">Smazat</string>
    <string name="action_edit_task">Upravit</string>

    <!-- TaskLists ContextMenu -->
    <string name="task_list_rename">Přejmenovat</string>
    <string name="task_list_delete">Smazat</string>

    <!-- Sort ContextMenu -->
    <string name="sort_by_due_date_ascending">Seřadit dle data splnění (vzestupně)</string>
    <string name="sort_by_due_date_descending">Seřadit dle data splnění (sestupně)</string>
    <string name="sort_by_due_date_then_by_distance">Seřadit dle data a vzdálenosti</string>
    <string name="sort_by_distance">Seřadit dle vzdálenosti</string>

    <string name="title_activity_maps">Map</string>

    <!-- Weather ikony Erik Flowers -->
    <string name="weather_day_sunny">&#xf00d;</string>
    <string name="weather_day_cloudy">&#xf002;</string>
    <string name="weather_cloud">&#xf041;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_day_showers">&#xf009;</string>
    <string name="weather_day_rain">&#xf008;</string>
    <string name="weather_day_thunderstorm">&#xf010;</string>
    <string name="weather_day_snow">&#xf00a;</string>
    <string name="weather_day_fog">&#xf003;</string>
    <string name="weather_day_sunny_overcast">&#xf00c;</string>
    <string name="weather_night_cloudy">&#xf086;</string>
    <string name="weather_night_showers">&#xf037;</string>
    <string name="weather_night_rain">&#xf036;</string>
    <string name="weather_night_thunderstorm">&#xf01e;</string>
    <string name="weather_night_snow">&#xf038;</string>
    <string name="weather_night_fog">&#xf04a;</string>
    <string name="weather_barometer">&#xf079;</string>
    <string name="weather_humidity">&#xf07a;</string>
    <string name="weather_windy">&#xf021;</string>
</resources>